[SWOZO-32] fix caching, add creation modal
